[gd_scene load_steps=23 format=3 uid="uid://1gqrqwmx46jc"]

[ext_resource type="PackedScene" uid="uid://7hbuh8vjpqfo" path="res://Cenas/torre.tscn" id="1_oji8i"]
[ext_resource type="Script" uid="uid://8gh3yn3per8t" path="res://Scripts/wave_manager.gd" id="2_j5dva"]
[ext_resource type="PackedScene" uid="uid://cmc0jd60rvwup" path="res://Cenas/inimigo.tscn" id="3_8gp82"]
[ext_resource type="PackedScene" uid="uid://vi3awdpqe536" path="res://Cenas/inimigo_tanque.tscn" id="4_qboq2"]
[ext_resource type="FontFile" uid="uid://ctagv3dbbs3jl" path="res://Cenas/tema_fontes.tres" id="5_1ag4k"]
[ext_resource type="PackedScene" uid="uid://ch7gn1bngbhl3" path="res://Cenas/inimigo_rapido.tscn" id="5_osa5f"]
[ext_resource type="Script" uid="uid://dm4ekes02v873" path="res://Scripts/Onda.gd" id="6_bjsl6"]
[ext_resource type="Script" uid="uid://xwuxyfxd84c0" path="res://Scripts/Upgrade.gd" id="6_j4kvc"]
[ext_resource type="StyleBox" uid="uid://cuc55qbeur5fy" path="res://Cenas/estilodospaineis.tres" id="6_osa5f"]

[sub_resource type="Resource" id="Resource_j20r2"]
script = ExtResource("6_bjsl6")
normal = 5
tanque = 0
rapido = 0
metadata/_custom_type_script = "uid://dm4ekes02v873"

[sub_resource type="Resource" id="Resource_afyt6"]
script = ExtResource("6_bjsl6")
normal = 8
tanque = 0
rapido = 0
metadata/_custom_type_script = "uid://dm4ekes02v873"

[sub_resource type="Resource" id="Resource_xypay"]
script = ExtResource("6_bjsl6")
normal = 5
tanque = 0
rapido = 3
metadata/_custom_type_script = "uid://dm4ekes02v873"

[sub_resource type="Resource" id="Resource_bjsl6"]
script = ExtResource("6_j4kvc")
nome_para_mostrar = "Tiro Perfurante"
custo = 200
valor = 1.0
descricao = "Projétil atinge vários inimigos."
tipo_upgrade = "tiro_perfurante"
metadata/_custom_type_script = "uid://xwuxyfxd84c0"

[sub_resource type="Resource" id="Resource_yn71n"]
script = ExtResource("6_j4kvc")
nome_para_mostrar = "Dano em Área"
custo = 250
valor = 0.2
descricao = "Projétil com dano em área."
tipo_upgrade = "dano_em_area"
metadata/_custom_type_script = "uid://xwuxyfxd84c0"

[sub_resource type="Resource" id="Resource_c6pvx"]
script = ExtResource("6_j4kvc")
nome_para_mostrar = "+ Dano Projétil"
custo = 100
valor = 15.0
descricao = "Aumenta o dano dos projéteis em 5."
tipo_upgrade = "aumentar_dano"
metadata/_custom_type_script = "uid://xwuxyfxd84c0"

[sub_resource type="Resource" id="Resource_nt6ue"]
script = ExtResource("6_j4kvc")
nome_para_mostrar = "+ Velocidade da Torre"
custo = 100
valor = 0.12
descricao = "Aumenta a velocidade de ataque da torre em 10%."
tipo_upgrade = "aumentar_velocidade"
metadata/_custom_type_script = "uid://xwuxyfxd84c0"

[sub_resource type="Resource" id="Resource_ktpro"]
script = ExtResource("6_j4kvc")
nome_para_mostrar = "+ Alcance da Torre"
custo = 80
valor = 0.1
descricao = "Aumenta o alcance da torre em 15%."
tipo_upgrade = "aumentar_alcance"
metadata/_custom_type_script = "uid://xwuxyfxd84c0"

[sub_resource type="LabelSettings" id="LabelSettings_bjsl6"]
font = ExtResource("5_1ag4k")
font_size = 19
font_color = Color(1, 1, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yn71n"]
font = ExtResource("5_1ag4k")
font_size = 19
font_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_c6pvx"]
font = ExtResource("5_1ag4k")
font_size = 19
font_color = Color(1, 1, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_nt6ue"]
font = ExtResource("5_1ag4k")
font_size = 19
font_color = Color(1, 1, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8gp82"]
font = ExtResource("5_1ag4k")
font_size = 19
font_color = Color(1, 1, 0, 1)

[node name="Mundo" type="Node2D"]

[node name="Torre" parent="." instance=ExtResource("1_oji8i")]
position = Vector2(640, 357)
scale = Vector2(0.6, 0.6)

[node name="WaveManager" type="Node" parent="."]
script = ExtResource("2_j5dva")
inimigo1_scene = ExtResource("3_8gp82")
inimigo_tanque_scene = ExtResource("4_qboq2")
inimigo_rapido_scene = ExtResource("5_osa5f")
nome_das_ondas = Array[ExtResource("6_bjsl6")]([SubResource("Resource_j20r2"), SubResource("Resource_afyt6"), SubResource("Resource_xypay")])
catalogo_de_upgrades = [SubResource("Resource_bjsl6"), SubResource("Resource_yn71n"), SubResource("Resource_c6pvx"), SubResource("Resource_nt6ue"), SubResource("Resource_ktpro")]

[node name="Vida_Canva" type="CanvasLayer" parent="."]

[node name="Vida" type="Label" parent="Vida_Canva"]
offset_left = 17.0
offset_top = 53.0
offset_right = 122.0
offset_bottom = 76.0
text = "Vida da torre:"
label_settings = SubResource("LabelSettings_bjsl6")

[node name="VidaBase" type="Label" parent="Vida_Canva"]
offset_left = 268.0
offset_top = 53.0
offset_right = 308.0
offset_bottom = 81.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 20
text = "0"
label_settings = SubResource("LabelSettings_yn71n")

[node name="Onda_Atual" type="CanvasLayer" parent="."]

[node name="numeroDaOnda" type="Label" parent="Onda_Atual"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.0
offset_top = 19.0
offset_right = 17.0
offset_bottom = 47.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 20
text = "0"
label_settings = SubResource("LabelSettings_c6pvx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Dinheiro_Canva" type="CanvasLayer" parent="."]

[node name="Dinheiro" type="Label" parent="Dinheiro_Canva"]
offset_left = 16.0
offset_top = 19.0
offset_right = 88.0
offset_bottom = 42.0
text = "Dinheiro:"
label_settings = SubResource("LabelSettings_nt6ue")
metadata/_edit_group_ = true

[node name="Valor" type="Label" parent="Dinheiro_Canva"]
offset_left = 188.0
offset_top = 19.0
offset_right = 228.0
offset_bottom = 46.0
text = "0"
label_settings = SubResource("LabelSettings_8gp82")
metadata/_edit_group_ = true

[node name="Painel_Canva" type="CanvasLayer" parent="."]

[node name="PainelDeUpgrades" type="PanelContainer" parent="Painel_Canva"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 19.9
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("6_osa5f")

[node name="OrganizadorVertical" type="HBoxContainer" parent="Painel_Canva/PainelDeUpgrades"]
layout_mode = 2
alignment = 1

[node name="ButtonUpgrade1" type="Button" parent="Painel_Canva/PainelDeUpgrades/OrganizadorVertical"]
layout_mode = 2

[node name="ButtonUpgrade2" type="Button" parent="Painel_Canva/PainelDeUpgrades/OrganizadorVertical"]
layout_mode = 2

[node name="ButtonUpgrade3" type="Button" parent="Painel_Canva/PainelDeUpgrades/OrganizadorVertical"]
layout_mode = 2

[node name="ButtonPular" type="Button" parent="Painel_Canva/PainelDeUpgrades/OrganizadorVertical"]
layout_mode = 2

[node name="Tela_Game_Over" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="Tela_Game_Over"]
process_mode = 3
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.5
offset_top = -36.5
offset_right = 59.5
offset_bottom = 36.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("6_osa5f")

[node name="VBoxContainer" type="VBoxContainer" parent="Tela_Game_Over/PanelContainer"]
layout_mode = 2

[node name="FimDeJogo" type="Label" parent="Tela_Game_Over/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "VOCE MORREU!
GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="botao_reiniciar" type="Button" parent="Tela_Game_Over/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Reiniciar"

[node name="botao_quit" type="Button" parent="Tela_Game_Over/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Sair do Jogo"

[node name="Tela_pausa" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="Tela_pausa"]
process_mode = 3
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.5
offset_top = -36.5
offset_right = 59.5
offset_bottom = 36.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("6_osa5f")

[node name="VBoxContainer" type="VBoxContainer" parent="Tela_pausa/PanelContainer"]
layout_mode = 2

[node name="FimDeJogo" type="Label" parent="Tela_pausa/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "PAUSA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="botao_voltar" type="Button" parent="Tela_pausa/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Voltar"

[node name="botao_reiniciar" type="Button" parent="Tela_pausa/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Reiniciar"

[node name="botao_quit" type="Button" parent="Tela_pausa/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Sair do Jogo"
